JAMES-3261 Fix typos in James memory JIB declarations

--- a/server/container/guice/memory-guice/pom.xml
+++ b/server/container/guice/memory-guice/pom.xml
@@ -251,7 +251,7 @@
                 <artifactId>download-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>install-jbpm</id>
+                        <id>install-glowroot</id>
                         <goals>
                             <goal>wget</goal>
                         </goals>
