JAMES-3589 Rename mailetcontainer-camel maven module

--- a/server/mailet/mailetcontainer-impl/pom.xml
+++ b/server/mailet/mailetcontainer-impl/pom.xml
@@ -27,10 +27,10 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>james-server-mailetcontainer-camel</artifactId>
+    <artifactId>james-server-mailetcontainer-impl</artifactId>
     <packaging>jar</packaging>
 
-    <name>Apache James :: Server :: Mailetcontainer Camel</name>
+    <name>Apache James :: Server :: Mailetcontainer Impl</name>
 
     <dependencies>
         <dependency>
