--- a/pom.xml
+++ b/pom.xml
@@ -492,35 +492,35 @@
             <subscribe>server-dev-subscribe@james.apache.org</subscribe>
             <unsubscribe>server-dev-unsubscribe@james.apache.org</unsubscribe>
             <post>server-dev@james.apache.org</post>
-            <archive>http://mail-archives.apache.org/mod_mbox/james-server-dev/</archive>
+            <archive>https://mail-archives.apache.org/mod_mbox/james-server-dev/</archive>
         </mailingList>
         <mailingList>
             <name>Server User</name>
             <subscribe>server-user-subscribe@james.apache.org</subscribe>
             <unsubscribe>server-user-unsubscribe@james.apache.org</unsubscribe>
             <post>server-user@james.apache.org</post>
-            <archive>http://mail-archives.apache.org/mod_mbox/james-server-user/</archive>
+            <archive>https://mail-archives.apache.org/mod_mbox/james-server-user/</archive>
         </mailingList>
         <mailingList>
             <name>Mime4J</name>
             <subscribe>mime4j-dev-subscribe@james.apache.org</subscribe>
             <unsubscribe>mime4j-dev-unsubscribe@james.apache.org</unsubscribe>
             <post>mime4j-dev@james.apache.org</post>
-            <archive>http://mail-archives.apache.org/mod_mbox/james-mime4j-dev/</archive>
+            <archive>https://mail-archives.apache.org/mod_mbox/james-mime4j-dev/</archive>
         </mailingList>
         <mailingList>
             <name>General</name>
             <subscribe>general-subscribe@james.apache.org</subscribe>
             <unsubscribe>general-unsubscribe@james.apache.org</unsubscribe>
             <post>general@james.apache.org</post>
-            <archive>http://mail-archives.apache.org/mod_mbox/james-general/</archive>
+            <archive>https://mail-archives.apache.org/mod_mbox/james-general/</archive>
         </mailingList>
         <mailingList>
             <name>Website Development</name>
             <subscribe>site-dev-subscribe@james.apache.org</subscribe>
             <unsubscribe>site-dev-unsubscribe@james.apache.org</unsubscribe>
             <post>site-dev@james.apache.org</post>
-            <archive>http://mail-archives.apache.org/mod_mbox/james-site-dev/</archive>
+            <archive>https://mail-archives.apache.org/mod_mbox/james-site-dev/</archive>
         </mailingList>
     </mailingLists>
 
