JAMES-3225 HTTPS for JIRA link

--- a/pom.xml
+++ b/pom.xml
@@ -552,7 +552,7 @@
 
     <issueManagement>
         <system>JIRA</system>
-        <url>http://issues.apache.org/jira/browse/JAMES</url>
+        <url>https://issues.apache.org/jira/browse/JAMES</url>
     </issueManagement>
 
     <ciManagement>
