--- a/server/protocols/jmap-rfc-8621-integration-tests/memory-jmap-rfc-8621-integration-tests/src/test/resources/jmap.properties
+++ b/server/protocols/jmap-rfc-8621-integration-tests/memory-jmap-rfc-8621-integration-tests/src/test/resources/jmap.properties
@@ -1,5 +1,5 @@
 # Configuration urlPrefix for JMAP routes.
 url.prefix=http://domain.com
 websocket.url.prefix=ws://domain.com
-websocket.ping.interval=500ms
+websocket.ping.interval=2s
 upload.max.size=20M
