--- a/server/apps/spring-app/pom.xml
+++ b/server/apps/spring-app/pom.xml
@@ -25,13 +25,13 @@
         <groupId>org.apache.james</groupId>
         <artifactId>james-server</artifactId>
         <version>3.7.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>james-server-app</artifactId>
+    <artifactId>james-server-spring-app</artifactId>
     <packaging>jar</packaging>
 
-    <name>Apache James :: Server :: App</name>
+    <name>Apache James :: Server :: Spring :: App</name>
     <description>An advanced email server / Spring version</description>
 
     <properties>
