--- a/server/apps/distributed-app/pom.xml
+++ b/server/apps/distributed-app/pom.xml
@@ -23,20 +23,32 @@
 
     <parent>
         <groupId>org.apache.james</groupId>
-        <artifactId>james-server-guice</artifactId>
+        <artifactId>james-server</artifactId>
         <version>3.7.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>james-server-cassandra-rabbitmq-guice</artifactId>
+    <artifactId>james-server-distributed-app</artifactId>
     <packaging>jar</packaging>
 
-    <name>Apache James :: Server :: Cassandra with RabbitMQ - guice injection</name>
+    <name>Apache James :: Server :: Distributed :: APP</name>
     <description>An advanced email server - Cassandra backend and RabbitMQ messaging with guice injection</description>
 
     <properties>
         <cassandra.includes>empty</cassandra.includes>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
+                <artifactId>james-server-guice</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -505,7 +517,7 @@
                     <descriptorSourceDirectory>src/assemble/</descriptorSourceDirectory>
                     <tarLongFileMode>gnu</tarLongFileMode>
                     <appendAssemblyId>false</appendAssemblyId>
-                    <finalName>james-server-distributed-guice</finalName>
+                    <finalName>james-server-distributed-app</finalName>
                 </configuration>
                 <executions>
                     <execution>
