--- a/server/pom.xml
+++ b/server/pom.xml
@@ -40,6 +40,7 @@
     <modules>
         <module>apps/cassandra-app</module>
         <module>apps/cassandra-app-ldap-tests</module>
+        <module>apps/distributed-app</module>
         <module>apps/spring-app</module>
 
         <module>blob</module>
