--- a/server/pom.xml
+++ b/server/pom.xml
@@ -40,12 +40,12 @@
     <modules>
         <module>apps/cassandra-app</module>
         <module>apps/cassandra-app-ldap-tests</module>
+        <module>apps/cli</module>
         <module>apps/distributed-app</module>
         <module>apps/spring-app</module>
 
         <module>blob</module>
 
-        <module>container/cli</module>
         <module>container/cli-integration</module>
         <module>container/core</module>
         <module>container/filesystem-api</module>
