JAMES-3596 Move CLI integration tests in server/apps folder

--- a/server/apps/cli-integration-tests/pom.xml
+++ b/server/apps/cli-integration-tests/pom.xml
@@ -27,8 +27,8 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>james-server-cli-integration</artifactId>
-    <name>Apache James :: Server :: Cli :: Integration</name>
+    <artifactId>james-server-cli-integration-tests</artifactId>
+    <name>Apache James :: Server :: Cli :: Integration tests</name>
 
     <dependencies>
         <dependency>
