--- a/server/apps/distributed-ldap-tests/pom.xml
+++ b/server/apps/distributed-ldap-tests/pom.xml
@@ -21,15 +21,28 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.james</groupId>
-        <artifactId>james-server-guice</artifactId>
+        <artifactId>james-server</artifactId>
         <version>3.7.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>james-server-cassandra-rabbitmq-ldap-guice</artifactId>
+    <artifactId>james-server-distributed-ldap-tests</artifactId>
 
-    <name>Apache James :: Server :: Cassandra/Ldap with RabbitMQ - guice injection</name>
-    <description>An advanced email server - Cassandra/Ldap backend and RabbitMQ messaging with guice injection</description>
+    <name>Apache James :: Server :: Distributed :: LDAP tests</name>
+    <description>Tests for the distributed servers backed by LDAP user authentication</description>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
+                <artifactId>james-server-guice</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>${james.groupId}</groupId>
@@ -69,7 +82,7 @@
         </dependency>
         <dependency>
             <groupId>${james.groupId}</groupId>
-            <artifactId>james-server-cassandra-ldap-guice</artifactId>
+            <artifactId>james-server-cassandra-app-ldap-tests</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
