--- a/server/container/guice/pom.xml
+++ b/server/container/guice/pom.xml
@@ -48,9 +48,9 @@
         <module>guice-utils</module>
         <module>jmx</module>
         <module>jpa-common-guice</module>
-        <module>jpa-guice</module>
         <module>jpa-smtp-common</module>
         <module>mailbox</module>
+        <module>mailbox-jpa</module>
         <module>mailbox-plugin-deleted-messages-vault-guice</module>
         <module>mailbox-plugin-spamassassin</module>
         <module>mailet</module>
@@ -142,6 +142,11 @@
             <dependency>
                 <groupId>${james.groupId}</groupId>
                 <artifactId>james-server-guice-mailbox</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
+                <artifactId>james-server-guice-mailbox-jpa</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
