--- a/mailbox/api/pom.xml
+++ b/mailbox/api/pom.xml
@@ -24,7 +24,7 @@
         <groupId>org.apache.james</groupId>
         <artifactId>apache-james-mailbox</artifactId>
         <version>3.7.0-SNAPSHOT</version>
-        <relativePath>..</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>apache-james-mailbox-api</artifactId>
