--- a/server/apps/webadmin-cli/pom.xml
+++ b/server/apps/webadmin-cli/pom.xml
@@ -45,7 +45,7 @@
         </dependency>
         <dependency>
             <groupId>${james.groupId}</groupId>
-            <artifactId>james-server-memory-guice</artifactId>
+            <artifactId>james-server-memory-app</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
