--- a/server/container/guice/pom.xml
+++ b/server/container/guice/pom.xml
@@ -55,7 +55,7 @@
         <module>mailbox-plugin-spamassassin</module>
         <module>mailet</module>
         <module>mailrepository-cassandra</module>
-        <module>memory-guice</module>
+        <module>memory</module>
         <module>onami</module>
         <module>protocols/imap</module>
         <module>protocols/jmap</module>
@@ -162,6 +162,11 @@
             <dependency>
                 <groupId>${james.groupId}</groupId>
                 <artifactId>james-server-guice-managedsieve</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
+                <artifactId>james-server-guice-memory</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
