--- a/server/apps/distributed-app/sample-configuration/rabbitmq.properties
+++ b/server/apps/distributed-app/sample-configuration/rabbitmq.properties
@@ -29,6 +29,14 @@ management.password=guest
 # Optional integer, defaults to 3
 #channel.pool.size=3
 
+# Boolean. Whether to activate Quorum queue usage for use cases that benefits from it (work queue).
+# Quorum queues enables high availability.
+# False (default value) results in the usage of classic queues.
+#quorum.queues.enable=true
+
+# Strictly positive integer. The replication factor to use when creating quorum queues.
+#quorum.queues.replication.factor
+
 # Parameters for the Cassandra administrative view
 
 # Period of the window. Too large values will lead to wide rows while too little values might lead to many queries.
