JAMES-3604 RabbitMQ connections should be cluster aware

--- a/server/apps/distributed-app/sample-configuration/rabbitmq.properties
+++ b/server/apps/distributed-app/sample-configuration/rabbitmq.properties
@@ -5,6 +5,10 @@
 # Mandatory
 uri=amqp://rabbitmq:5672
 
+# Optional, default to the host specified as part of the URI.
+# Allow creating cluster aware connections.
+hosts=ip1:5672,ip2:5672
+
 # RabbitMQ Administration Management
 # Mandatory
 management.uri=http://rabbitmq:15672
