--- a/server/apps/distributed-app/pom.xml
+++ b/server/apps/distributed-app/pom.xml
@@ -506,6 +506,14 @@
                                     <classpathPrefix>${project.artifactId}.lib/</classpathPrefix>
                                     <mainClass>org.apache.james.CassandraRabbitMQJamesServerMain</mainClass>
                                     <useUniqueVersions>false</useUniqueVersions>
+                                    <Specification-Title>Apache James Distributed server Application</Specification-Title>
+                                    <Specification-Version>${project.version}</Specification-Version>
+                                    <Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
+                                    <Implementation-Title>Apache James Distributed server Application</Implementation-Title>
+                                    <Implementation-Version>${project.version}</Implementation-Version>
+                                    <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
+                                    <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
+                                    <url>${project.url}</url>
                                 </manifest>
                             </archive>
                         </configuration>
