--- a/server/apps/webadmin-cli/pom.xml
+++ b/server/apps/webadmin-cli/pom.xml
@@ -98,6 +98,14 @@
                             <archive>
                                 <manifest>
                                     <mainClass>org.apache.james.cli.WebAdminCli</mainClass>
+                                    <Specification-Title>Apache James WebAdmin CLI Application</Specification-Title>
+                                    <Specification-Version>${project.version}</Specification-Version>
+                                    <Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
+                                    <Implementation-Title>Apache James WebAdmin CLI Application</Implementation-Title>
+                                    <Implementation-Version>${project.version}</Implementation-Version>
+                                    <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
+                                    <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
+                                    <url>${project.url}</url>
                                 </manifest>
                             </archive>
                             <descriptorRefs>
