fixup! JAMES-3261 Add some manifest entries when using maven-jar-plugin

--- a/server/apps/jpa-smtp-mariadb-app/pom.xml
+++ b/server/apps/jpa-smtp-mariadb-app/pom.xml
@@ -128,6 +128,8 @@
                                     <classpathPrefix>${project.artifactId}.lib/</classpathPrefix>
                                     <mainClass>org.apache.james.JPAJamesServerMain</mainClass>
                                     <useUniqueVersions>false</useUniqueVersions>
+                                </manifest>
+                                <manifestEntries>
                                     <Specification-Title>Apache James JPA-SMTP mariaDB server Application</Specification-Title>
                                     <Specification-Version>${project.version}</Specification-Version>
                                     <Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
@@ -135,8 +137,8 @@
                                     <Implementation-Version>${project.version}</Implementation-Version>
                                     <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
                                     <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
-                                    <url>${project.url}</url>
-                                </manifest>
+                                    <url>https://james.apache.org/server</url>
+                                </manifestEntries>
                             </archive>
                         </configuration>
                     </execution>
