--- a/server/apps/cli/pom.xml
+++ b/server/apps/cli/pom.xml
@@ -110,6 +110,8 @@
                             <classpathPrefix>${project.artifactId}.lib/</classpathPrefix>
                             <mainClass>org.apache.james.cli.ServerCmd</mainClass>
                             <useUniqueVersions>false</useUniqueVersions>
+                        </manifest>
+                        <manifestEntries>
                             <Specification-Title>Apache James CLI Application</Specification-Title>
                             <Specification-Version>${project.version}</Specification-Version>
                             <Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
@@ -117,8 +119,8 @@
                             <Implementation-Version>${project.version}</Implementation-Version>
                             <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
                             <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
-                            <url>${project.url}</url>
-                        </manifest>
+                            <url>https://james.apache.org/server</url>
+                        </manifestEntries>
                     </archive>
                 </configuration>
             </plugin>
