--- a/server/apps/webadmin-cli/pom.xml
+++ b/server/apps/webadmin-cli/pom.xml
@@ -98,6 +98,8 @@
                             <archive>
                                 <manifest>
                                     <mainClass>org.apache.james.cli.WebAdminCli</mainClass>
+                                </manifest>
+                                <manifestEntries>
                                     <Specification-Title>Apache James WebAdmin CLI Application</Specification-Title>
                                     <Specification-Version>${project.version}</Specification-Version>
                                     <Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
@@ -105,8 +107,8 @@
                                     <Implementation-Version>${project.version}</Implementation-Version>
                                     <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
                                     <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
-                                    <url>${project.url}</url>
-                                </manifest>
+                                    <url>https://james.apache.org/server</url>
+                                </manifestEntries>
                             </archive>
                             <descriptorRefs>
                                 <descriptorRef>jar-with-dependencies</descriptorRef>
