JAMES-3261 JPA-SMTP app: docker-compose to connect to MariaDB

--- a/server/apps/jpa-smtp-app/sample-configuration/james-database-mariadb.properties
+++ b/server/apps/jpa-smtp-app/sample-configuration/james-database-mariadb.properties
@@ -18,17 +18,13 @@
 #  This template file can be used as example for James Server configuration
 #  DO NOT USE IT AS SUCH AND ADAPT IT TO YOUR NEEDS
 
-# See http://james.apache.org/server/3/config.html for usage
+# Read https://james.apache.org/server/config-system.html#james-database.properties for further details
 
 # Use derby as default
 database.driverClassName=org.mariadb.jdbc.Driver
-database.url=jdbc:mariadb://localhost:3306/
-database.username=app
-database.password=app
-
-# Supported adapters are:
-# DB2, DERBY, H2, HSQL, INFORMIX, MYSQL, ORACLE, POSTGRESQL, SQL_SERVER, SYBASE 
-vendorAdapter.database=MYSQL
+database.url=jdbc:mariadb://mariadb/test
+database.username=test
+database.password=test
 
 # Use streaming for Blobs
 # This is only supported on a limited set of databases atm. You should check if its supported by your DB before enable
