--- a/server/container/guice/queue/rabbitmq/pom.xml
+++ b/server/container/guice/queue/rabbitmq/pom.xml
@@ -46,6 +46,10 @@
         </dependency>
         <dependency>
             <groupId>${james.groupId}</groupId>
+            <artifactId>james-server-mailetcontainer-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${james.groupId}</groupId>
             <artifactId>james-server-queue-api</artifactId>
         </dependency>
         <dependency>
