[SCALA_CHECKSTYLE] Adding rule ExplicitResultTypes

--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -3,7 +3,8 @@ rules = [
     DisableSyntax,
     ProcedureSyntax,
     NoValInForComprehension,
-    LeakingImplicitClassVal
+    LeakingImplicitClassVal,
+    ExplicitResultTypes
 ]
 
 RemoveUnused.imports = true
