--- a/server/container/guice/pom.xml
+++ b/server/container/guice/pom.xml
@@ -104,6 +104,12 @@
             </dependency>
             <dependency>
                 <groupId>${james.groupId}</groupId>
+                <artifactId>james-server-guice-data-ldap</artifactId>
+                <version>${project.version}</version>
+                <type>test-jar</type>
+            </dependency>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
                 <artifactId>james-server-guice-distributed</artifactId>
                 <version>${project.version}</version>
             </dependency>
