--- a/pom.xml
+++ b/pom.xml
@@ -1143,6 +1143,12 @@
             </dependency>
             <dependency>
                 <groupId>${james.groupId}</groupId>
+                <artifactId>blob-storage-strategy</artifactId>
+                <version>${project.version}</version>
+                <type>test-jar</type>
+            </dependency>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
                 <artifactId>dead-letter-cassandra</artifactId>
                 <version>${project.version}</version>
             </dependency>
