JAMES-3150 Integrate Blob garbage collection to James

--- a/pom.xml
+++ b/pom.xml
@@ -1149,6 +1149,11 @@
             </dependency>
             <dependency>
                 <groupId>${james.groupId}</groupId>
+                <artifactId>blob-strategy-guice</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
                 <artifactId>dead-letter-cassandra</artifactId>
                 <version>${project.version}</version>
             </dependency>
