--- a/server/container/guice/pom.xml
+++ b/server/container/guice/pom.xml
@@ -37,6 +37,7 @@
         <module>blob/export</module>
         <module>blob/memory</module>
         <module>blob/s3</module>
+        <module>blob/strategy</module>
         <module>cassandra</module>
         <module>common</module>
         <module>configuration</module>
