--- a/server/apps/distributed-app/sample-configuration/jmap.properties
+++ b/server/apps/distributed-app/sample-configuration/jmap.properties
@@ -6,6 +6,12 @@ enabled=true
 tls.keystoreURL=file://conf/keystore
 tls.secret=james72laBalle
 
+# Alternatively TLS keys can be supplied via PEM files
+# tls.privateKey=file://conf/private.nopass.key
+# tls.certificates=file://conf/certs.self-signed.csr
+# An optional secret might be specified for the private key
+# tls.secret=james72laBalle
+
 #
 # If you wish to use OAuth authentication, you should provide a valid JWT public key.
 # The following entry specify the link to the URL of the public key file,
