UPGRADE jackson-dataformat-cbor 2.10.4 -> 2.11.4 (ES 7 driver)

--- a/backends-common/elasticsearch-v7/pom.xml
+++ b/backends-common/elasticsearch-v7/pom.xml
@@ -46,6 +46,14 @@
             <artifactId>testing-base</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- Prevents https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-28491 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-cbor</artifactId>
+            <version>2.11.4</version>
+        </dependency>
+
         <dependency>
             <groupId>com.github.fge</groupId>
             <artifactId>throwing-lambdas</artifactId>
