--- a/pom.xml
+++ b/pom.xml
@@ -1753,6 +1753,11 @@
             </dependency>
             <dependency>
                 <groupId>${james.groupId}</groupId>
+                <artifactId>james-server-queue-pulsar</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
                 <artifactId>james-server-queue-rabbitmq</artifactId>
                 <version>${project.version}</version>
             </dependency>
