JAMES-3687 Build a smtp-relay assembly using cassandra + pulsar and test it with mpt
Co-Authored-By: Jean Helou <jhe@codamens.fr>

--- a/mpt/impl/smtp/pom.xml
+++ b/mpt/impl/smtp/pom.xml
@@ -32,6 +32,7 @@
 
     <modules>
         <module>cassandra</module>
+        <module>cassandra-pulsar</module>
         <module>cassandra-rabbitmq-object-storage</module>
         <module>core</module>
     </modules>
