--- a/server/pom.xml
+++ b/server/pom.xml
@@ -46,6 +46,7 @@
         <module>apps/jpa-app</module>
         <module>apps/jpa-smtp-app</module>
         <module>apps/memory-app</module>
+        <module>apps/smtp-pulsar-cassandra-app</module>
         <module>apps/spring-app</module>
         <module>apps/webadmin-cli</module>
 
