JAMES-3539 PushSubscriptionSetCreateProcessor - pushVerification

--- a/server/protocols/jmap-rfc-8621-integration-tests/memory-jmap-rfc-8621-integration-tests/src/test/resources/jmap.properties
+++ b/server/protocols/jmap-rfc-8621-integration-tests/memory-jmap-rfc-8621-integration-tests/src/test/resources/jmap.properties
@@ -2,3 +2,5 @@
 url.prefix=http://domain.com
 websocket.url.prefix=ws://domain.com
 upload.max.size=20M
+webpush.maxTimeoutSeconds=10
+webpush.maxConnections=10
